WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215528
[JSC] attribute-change transition should not pin Structure
https://bugs.webkit.org/show_bug.cgi?id=215528
Summary
[JSC] attribute-change transition should not pin Structure
Yusuke Suzuki
Reported
2020-08-14 17:40:43 PDT
[JSC] attribute-change transition should not pin Structure
Attachments
Patch
(28.95 KB, patch)
2020-08-14 17:41 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(28.98 KB, patch)
2020-08-14 17:51 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(29.25 KB, patch)
2020-08-14 19:20 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(28.35 KB, patch)
2020-08-14 19:23 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Patch
(28.31 KB, patch)
2020-08-14 20:23 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-08-14 17:41:00 PDT
Created
attachment 406637
[details]
Patch
Yusuke Suzuki
Comment 2
2020-08-14 17:51:08 PDT
Created
attachment 406639
[details]
Patch
Yusuke Suzuki
Comment 3
2020-08-14 19:20:01 PDT
Created
attachment 406648
[details]
Patch
Yusuke Suzuki
Comment 4
2020-08-14 19:23:18 PDT
Created
attachment 406649
[details]
Patch
Saam Barati
Comment 5
2020-08-14 19:35:59 PDT
Comment on
attachment 406649
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406649&action=review
> Source/JavaScriptCore/runtime/Structure.cpp:492 > + if (structure->hasBeenDictionary())
maybe just an explanation why this is the way it is and why it's not profitable to do the other thing
Yusuke Suzuki
Comment 6
2020-08-14 20:23:48 PDT
Created
attachment 406653
[details]
Patch
Radar WebKit Bug Importer
Comment 7
2020-08-21 17:41:13 PDT
<
rdar://problem/67591477
>
Yusuke Suzuki
Comment 8
2020-09-11 20:28:18 PDT
Committed
r266969
: <
https://trac.webkit.org/changeset/266969
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug