Source/JavaScriptCore/runtime/Structure.cpp
@@ -438,20 +438,33 @@ PropertyTable* Structure::materializePropertyTable(VM& vm, bool setPropertyTable
         structure = structures[i];
         if (!structure->m_transitionPropertyName)
             continue;
-        if (structure->isPropertyDeletionTransition()) {
+        switch (structure->transitionKind()) {
+        case TransitionKind::PropertyAddition: {
+            PropertyMapEntry entry(structure->m_transitionPropertyName.get(), structure->transitionOffset(), structure->transitionPropertyAttributes());
+            auto nextOffset = table->nextOffset(structure->inlineCapacity());
+            ASSERT_UNUSED(nextOffset, nextOffset == structure->transitionOffset());
+            auto result = table->add(vm, entry);
+            ASSERT_UNUSED(result, result.second);
+            ASSERT_UNUSED(result, result.first.first->offset == nextOffset);
+            break;
+        }
+        case TransitionKind::PropertyDeletion: {
             auto item = table->find(structure->m_transitionPropertyName.get());
             ASSERT(item.first);
             table->remove(vm, item);
             table->addDeletedOffset(structure->transitionOffset());
-            continue;
+            break;
         }
-        ASSERT(structure->isPropertyAdditionTransition());
-        PropertyMapEntry entry(structure->m_transitionPropertyName.get(), structure->transitionOffset(), structure->transitionPropertyAttributes());
-        auto nextOffset = table->nextOffset(structure->inlineCapacity());
-        ASSERT_UNUSED(nextOffset, nextOffset == structure->transitionOffset());
-        auto result = table->add(vm, entry);
-        ASSERT_UNUSED(result, result.second);
-        ASSERT_UNUSED(result, result.first.first->offset == nextOffset);
+        case TransitionKind::PropertyAttributeChange: {
+            PropertyMapEntry* entry = table->get(structure->m_transitionPropertyName.get());
+            entry->attributes = structure->transitionPropertyAttributes();
+            ASSERT(entry->offset == structure->transitionOffset());
+            break;
+        }
+        default:
+            ASSERT_NOT_REACHED();
+            break;
+        }
     }
     
     checkOffsetConsistency(
@@ -473,6 +486,11 @@ Structure* Structure::addPropertyTransitionToExistingStructureImpl(Structure* st
 {
     ASSERT(!structure->isDictionary());
     ASSERT(structure->isObject());
+
+    offset = invalidOffset;
+
+    if (structure->hasBeenDictionary())
+        return nullptr;
 
     if (Structure* existingTransition = structure->m_transitionTable.get(uid, attributes, TransitionKind::PropertyAddition)) {
         validateOffset(existingTransition->transitionOffset(), existingTransition->inlineCapacity());
@@ -523,8 +541,7 @@ bool Structure::holesMustForwardToPrototype(VM& vm, JSObject* base) const
 
 Structure* Structure::addPropertyTransition(VM& vm, Structure* structure, PropertyName propertyName, unsigned attributes, PropertyOffset& offset)
 {
-    Structure* newStructure = addPropertyTransitionToExistingStructure(
-        structure, propertyName, attributes, offset);
+    Structure* newStructure = addPropertyTransitionToExistingStructure(structure, propertyName, attributes, offset);
     if (newStructure)
         return newStructure;
 
@@ -585,7 +602,7 @@ Structure* Structure::addNewPropertyTransition(VM& vm, Structure* structure, Pro
     transition->setProtectPropertyTableWhileTransitioning(false);
 
     checkOffset(transition->transitionOffset(), transition->inlineCapacity());
-    {
+    if (!structure->hasBeenDictionary()) {
         GCSafeConcurrentJSLocker locker(structure->m_lock, vm.heap);
         structure->m_transitionTable.add(vm, transition);
     }
@@ -610,6 +627,10 @@ Structure* Structure::removePropertyTransitionFromExistingStructureImpl(Structur
     ASSERT(structure->isObject());
 
     offset = invalidOffset;
+
+    if (structure->hasBeenDictionary())
+        return nullptr;
+
     if (Structure* existingTransition = structure->m_transitionTable.get(propertyName.uid(), attributes, TransitionKind::PropertyDeletion)) {
         validateOffset(existingTransition->transitionOffset(), existingTransition->inlineCapacity());
         offset = existingTransition->transitionOffset();
@@ -678,7 +699,7 @@ Structure* Structure::removeNewPropertyTransition(VM& vm, Structure* structure, 
     transition->setProtectPropertyTableWhileTransitioning(false);
 
     checkOffset(transition->transitionOffset(), transition->inlineCapacity());
-    {
+    if (!structure->hasBeenDictionary()) {
         GCSafeConcurrentJSLocker locker(structure->m_lock, vm.heap);
         structure->m_transitionTable.add(vm, transition);
     }
@@ -704,73 +725,75 @@ Structure* Structure::changePrototypeTransition(VM& vm, Structure* structure, JS
     return transition;
 }
 
+Structure* Structure::attributeChangeTransitionToExistingStructure(Structure* structure, PropertyName propertyName, unsigned attributes, PropertyOffset& offset)
+{
+    ASSERT(structure->isObject());
+
+    offset = invalidOffset;
+
+    if (structure->hasBeenDictionary())
+        return nullptr;
+
+    if (Structure* existingTransition = structure->m_transitionTable.get(propertyName.uid(), attributes, TransitionKind::PropertyAttributeChange)) {
+        validateOffset(existingTransition->transitionOffset(), existingTransition->inlineCapacity());
+        offset = existingTransition->transitionOffset();
+        return existingTransition;
+    }
+
+    return nullptr;
+}
+
 Structure* Structure::attributeChangeTransition(VM& vm, Structure* structure, PropertyName propertyName, unsigned attributes, DeferredStructureTransitionWatchpointFire* deferred)
 {
-    auto setEntryAttributes = [&](Structure* structure) {
-        PropertyMapEntry* entry = structure->ensurePropertyTable(vm)->get(propertyName.uid());
-        ASSERT(entry);
-        entry->attributes = attributes;
-    };
-
-    auto setStructureFlags = [&](Structure* structure) {
-        if (attributes & PropertyAttribute::ReadOnly)
-            structure->setContainsReadOnlyProperties();
-        if (attributes & PropertyAttribute::DontEnum)
-            structure->setIsQuickPropertyAccessAllowedForEnumeration(false);
-    };
-
     if (structure->isUncacheableDictionary()) {
-        setEntryAttributes(structure);
-        setStructureFlags(structure);
+        structure->attributeChangeWithoutTransition(vm, propertyName, attributes, [](const GCSafeConcurrentJSLocker&, PropertyOffset, PropertyOffset) { });
         structure->checkOffsetConsistency();
         return structure;
     }
 
-    if (!structure->isDictionary()) {
-        if (Structure* existingTransition = structure->m_transitionTable.get(propertyName.uid(), attributes, TransitionKind::PropertyAttributeChange)) {
-            validateOffset(existingTransition->transitionOffset(), existingTransition->inlineCapacity());
-            existingTransition->checkOffsetConsistency();
-            return existingTransition;
-        }
-
-        if (structure->transitionCountHasOverflowed()) {
-            ASSERT(!isCopyOnWrite(structure->indexingMode()));
-            Structure* transition = toUncacheableDictionaryTransition(vm, structure, deferred);
-            ASSERT(structure != transition);
-            setEntryAttributes(transition);
-            setStructureFlags(transition);
-            return transition;
-        }
+    ASSERT(!structure->isUncacheableDictionary());
+    PropertyOffset offset = invalidOffset;
+    if (Structure* existingTransition = attributeChangeTransitionToExistingStructure(structure, propertyName, attributes, offset)) {
+        validateOffset(existingTransition->transitionOffset(), existingTransition->inlineCapacity());
+        existingTransition->checkOffsetConsistency();
+        return existingTransition;
     }
 
+    if (structure->transitionCountHasOverflowed()) {
+        ASSERT(!isCopyOnWrite(structure->indexingMode()));
+        Structure* transition = toUncacheableDictionaryTransition(vm, structure, deferred);
+        ASSERT(structure != transition);
+        transition->attributeChange(vm, propertyName, attributes);
+        return transition;
+    }
+
+    // Even if the current structure is dictionary, we should perform transition since this changes attributes of existing properties to keep
+    // structure still cacheable.
     Structure* transition = create(vm, structure);
+    transition->m_cachedPrototypeChain.setMayBeNull(vm, transition, structure->m_cachedPrototypeChain.get());
 
     {
         ConcurrentJSLocker locker(transition->m_lock);
         transition->setProtectPropertyTableWhileTransitioning(true);
     }
 
-    PropertyTable* table = structure->copyPropertyTableForPinning(vm);
-    if (structure->isDictionary())
-        transition->pin(holdLock(transition->m_lock), vm, table);
-    else
-        transition->pinForCaching(holdLock(transition->m_lock), vm, table);
+    transition->m_blob.setIndexingModeIncludingHistory(structure->indexingModeIncludingHistory() & ~CopyOnWrite);
     transition->m_transitionPropertyName = propertyName.uid();
     transition->setTransitionPropertyAttributes(attributes);
     transition->setTransitionKind(TransitionKind::PropertyAttributeChange);
+    transition->setPropertyTable(vm, structure->takePropertyTableOrCloneIfPinned(vm));
     transition->setMaxOffset(vm, structure->maxOffset());
 
-    PropertyMapEntry* entry = table->get(propertyName.uid());
-    ASSERT(entry);
-    entry->attributes = attributes;
-    transition->setTransitionOffset(vm, entry->offset);
-    setStructureFlags(transition);
+    offset = transition->attributeChange(vm, propertyName, attributes);
+    transition->setTransitionOffset(vm, offset);
 
+    // Now that everything is fine with the new structure's bookkeeping, the GC is free to blow the
+    // table away if it wants. We can now rebuild it fine.
     WTF::storeStoreFence();
     transition->setProtectPropertyTableWhileTransitioning(false);
 
     checkOffset(transition->transitionOffset(), transition->inlineCapacity());
-    if (!structure->isDictionary()) {
+    if (!structure->hasBeenDictionary()) {
         GCSafeConcurrentJSLocker locker(structure->m_lock, vm.heap);
         structure->m_transitionTable.add(vm, transition);
     }
@@ -840,11 +863,12 @@ Structure* Structure::nonPropertyTransitionSlow(VM& vm, Structure* structure, Tr
 {
     IndexingType indexingModeIncludingHistory = newIndexingType(structure->indexingModeIncludingHistory(), transitionKind);
     
-    Structure* existingTransition;
-    if (!structure->isDictionary() && (existingTransition = structure->m_transitionTable.get(nullptr, 0, transitionKind))) {
-        ASSERT(existingTransition->transitionKind() == transitionKind);
-        ASSERT(existingTransition->indexingModeIncludingHistory() == indexingModeIncludingHistory);
-        return existingTransition;
+    if (!structure->isDictionary()) {
+        if (Structure* existingTransition = structure->m_transitionTable.get(nullptr, 0, transitionKind)) {
+            ASSERT(existingTransition->transitionKind() == transitionKind);
+            ASSERT(existingTransition->indexingModeIncludingHistory() == indexingModeIncludingHistory);
+            return existingTransition;
+        }
     }
     
     DeferGC deferGC(vm.heap);
@@ -1168,6 +1192,15 @@ PropertyOffset Structure::remove(VM& vm, PropertyName propertyName)
     return remove<ShouldPin::No>(vm, propertyName, [this, &vm] (const GCSafeConcurrentJSLocker&, PropertyOffset, PropertyOffset newMaxOffset) {
         setMaxOffset(vm, newMaxOffset);
     });
+}
+
+PropertyOffset Structure::attributeChange(VM& vm, PropertyName propertyName, unsigned attributes)
+{
+    return attributeChange<ShouldPin::No>(
+        vm, propertyName, attributes,
+        [this, &vm] (const GCSafeConcurrentJSLocker&, PropertyOffset, PropertyOffset newMaxOffset) {
+            setMaxOffset(vm, newMaxOffset);
+        });
 }
 
 void Structure::getPropertyNamesFromStructure(VM& vm, PropertyNameArray& propertyNames, EnumerationMode mode)
